erDiagram
    direction LR

    WARUNG {
        uuid id PK
        text nama_warung
    }

    PELANGGAN {
        uuid id PK
        uuid warung_id FK
        text nama
        text phone
        decimal total_hutang
    }

    PRODUK {
        uuid id PK
        uuid warung_id FK
        text nama_produk
        decimal harga_jual
        int stok_saat_ini
    }

    PENJUALAN {
        uuid id PK
        uuid warung_id FK
        uuid pelanggan_id FK
        text invoice_no
        timestamptz tanggal
        decimal total_amount
        decimal amount_paid
        payment_method payment_method
        transaction_status status
        decimal profit
    }

    PENJUALAN_ITEM {
        uuid id PK
        uuid penjualan_id FK
        uuid produk_id FK
        text nama_produk
        int quantity
        decimal harga_satuan
        decimal subtotal
        decimal harga_modal
    }

    WARUNG ||--o{ PELANGGAN : has
    WARUNG ||--o{ PENJUALAN : records
    PELANGGAN o|--o{ PENJUALAN : makes
    PENJUALAN ||--|{ PENJUALAN_ITEM : contains
    PRODUK ||--o{ PENJUALAN_ITEM : sold_as
